src/app/faqs/faqs.module.css
.page {
  display: grid;
  position: relative;
  background:  #0099AD 40%;

  display: grid;
  grid-template-rows: 20px 1fr 20px;
  align-items: center;
  justify-items: center;
  align-content: center;
  min-height: 40svh;


  font-family: var(--font-geist-sans);
  z-index: 1;
}

.title {
  position: relative;
  top: 30px;
  z-index: 1;
}

.artistNotes {
    position: relative;
    bottom: -10px;
    z-index: 1;
}

.notesGif {
    position: absolute;
    z-index: 2;
    left: -300px;
    top: -290px;
    z-index: 0;
}

.pageContent {
  display: grid;
  background: #E7E7CE;
  color: black;
  z-index: 1;
  align-items: center;
  justify-items: center;
  align-content: center;
  min-height: 50svh;
  margin: 50px;
}

.blueWave {
  display: grid;
  column-gap: 0;
  overflow: hidden;
  position: relative;
  z-index: 2;
  margin-top: -40px;
  
}

.blueWaveBackground {
    background: #E7E7CE;
}

.faqItem {
  margin-bottom: 1rem;
  z-index: 3;
}

.questionGrid {
  display: grid;              
  grid-template-columns: repeat(1, 1fr);
  margin: 0px auto;
  row-gap: 50px;
  z-index: 3;
}

.question {
  color: #E7E7CE;
  background: #DE6331;
  padding: 20px;             
  width: max-content;         
  height: 55px;
  width: 800px;
  border-radius: 10px 10px 0 0;
  cursor: pointer;
  z-index: 3;

  font-family: "Winky Rough", sans-serif;
  font-optical-sizing: auto;
  font-weight: bold;
  font-style: normal;
}

.answer {
  padding: 10px 20px;
  color: black;
  background: #f5f5f5;
  border-radius: 0 0 10px 10px;
  height: auto;
  width: 800px;
  z-index: 3;
}

.banner {
  background: #E7BD08 no-repeat center/cover;
  transform: rotate(-4deg);
  padding: 10px;
}

.image {
  display: block;
  margin-top: 50px;
  margin-bottom: 50px;
}

.imageLast {
  display: block;
  margin-top: 100px;
  
}

